--- a/admin-dev/themes/default/css/modules.css
+++ b/admin-dev/themes/default/css/modules.css
@@ -3,9 +3,11 @@
 #notifs_icon_wrapper {float: left;position: relative;margin:15px 10px 0; width:90px;}
 .notifs { float: left;position: relative;cursor: pointer;margin:0; padding:5px; width: 18px;height: 16px;}
 #orders_notif {background: url('../img/notif_order.png') no-repeat center top;}
+#order_returns_notif {background: url('../img/notif_order.png') no-repeat center top;}
 #customers_notif {background: url('../img/notif_customer.png') no-repeat center top;}
 #messages_notif {background: url('../img/notif_message.png') no-repeat center top;}
 #orders_notif.open_notifs,
+#order_returns_notif.open_notifs,
 #customers_notif.open_notifs,
 #messages_notif.open_notifs { background-color: #FFFFFF;border: 1px solid #000000; position: relative; display: block; background-position:center bottom; }
 
