EDS 2.6 Rewritten for PS 1.6 Invoice Email added Added untested stock mngmt on partailly status.

--- a/themes/default-bootstrap/css/history.css
+++ b/themes/default-bootstrap/css/history.css
@@ -22,6 +22,9 @@
 #order-detail-content table label {
   font-weight: 400;
 }
+#order-delivery-detail-content table label {
+  font-weight: 400;
+}
 
 .table td.history_detail a + a {
   margin-left: 14px;
